--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uso de la tablilla de pruebas</title>
+     <link rel="icon" href="carga-removebg-preview.png" type="image/png">
 </head>
 <body>
     <div class="container">
